--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -39,18 +39,28 @@
                 <input id="input-time" type = "text" placeholder="Time">
                 <input id="input-date" type = "text" placeholder="Date">
 
-                <button id="add-time" class="button">Add New Time</button> 
+                <button id="add-time" class="button">Add Time</button> 
                 
                 <div class="topper">Previous Logs</div>
-
-                <div id="previous-logs">
-                    <h2>Items</h2>
-                </div>
                 
-                <div class="previous_log_container">
-                    Learning Type
-                    Time
-                    Date
+                <section id="previous-logs">
+                    <div id="entry-one">
+                        <p class="text">Learning Type</p>
+                        <p class="text">Time</p>
+                        <p class="text">Date</p>
+                    </div>
+
+                    <div id="entry-two">
+                        <p class="text">Learning Type</p>
+                        <p class="text">Time</p>
+                        <p class="text">Date</p>
+                    </div>
+
+                    <div id="entry-three">
+                        <p class="text">Learning Type</p>
+                        <p class="text">Time</p>
+                        <p class="text">Date</p>
+                    </div>
                 </div>
 
             </div>
