almost working log feature

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -61,8 +61,7 @@
                         <p class="text">Time</p>
                         <p class="text">Date</p>
                     </div>
-                </div>
-
+                </section>
             </div>
         </section>
     <!-- ============================================ -->
