Working ADD TIME button

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -44,20 +44,22 @@
                 <div class="topper">Previous Logs</div>
                 
                 <section id="previous-logs">
-                    <div id="entry-one">
-                        <p class="text">Learning Type</p>
+                    <div class="card" id="entry-one">
+                        <p class="text"><mark class=card-top>Learning Type</mark></p>
                         <p class="text">Time</p>
                         <p class="text">Date</p>
                     </div>
+                    <br>
 
-                    <div id="entry-two">
-                        <p class="text">Learning Type</p>
+                    <div class="card" id="entry-two">
+                        <p class="text"><mark class=card-top>Learning Type</mark></p>
                         <p class="text">Time</p>
                         <p class="text">Date</p>
                     </div>
+                    <br>
 
-                    <div id="entry-three">
-                        <p class="text">Learning Type</p>
+                    <div class="card" id="entry-three">
+                        <p class="text"><mark class=card-top>Learning Type</mark></p>
                         <p class="text">Time</p>
                         <p class="text">Date</p>
                     </div>
