--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -59,7 +59,8 @@
         </section>
 
 <script src="/node_modules/chart.js/dist/chart.umd.js"></script>
-<script src="/javascript/dashboard_data.js"></script>
 <script src="/javascript/study_graph.js"></script>
+<script type="module" src="/javascript/requests.js"></script>
+<script type="module" src="/javascript/dashboard_data.js"></script>
 </body>
 </html>
