adding burger menu

--- a/index.html
+++ b/index.html
@@ -12,9 +12,22 @@
 <!-- ============================================ -->
 <!--                   Navigation                 -->
 <!-- ============================================ -->
-    <nav>
-        <a href="./index.html">Followord</a>
-    </nav>
+<div class="off-screen-menu">
+    <ul>
+        <li>Home</li>
+        <li>Logs</li>
+        <li>Settings</li>
+    </ul>
+</div>    
+
+<nav>
+    <div class="menu">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+</nav>
 
 <!-- ============================================ -->
 <!--                      Hero                    -->
@@ -46,5 +59,6 @@
 
 <script type= "module" src= "./javascript/main.js"></script>
 <script type= "module" src= "./javascript/requests.js"></script>
+<script type= "module" src= "./javascript/nav_footer.js"></script>
 </body>
 </html>
