--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 <!-- ============================================ -->
 <!--                   Navigation                 -->
 <!-- ============================================ -->
-<div class="off-screen-menu">
-    <ul>
-        <li>Home</li>
-        <li>Logs</li>
-        <li>Settings</li>
-    </ul>
-</div>    
+    <div class="off-screen-menu">
+        <ul>
+            <a href="pages/logs.html">Logs</a>
+            <a href="pages/settings.html">Settings</a>
+            <a href="pages/contact.html">Contact</a>
+        <ul>
+    </div>   
 
-<nav>
-    <div class="menu">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-</nav>
+    <nav>
+        <a href="./index.html" class="topper">Followord</a>
+        <div class="menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </nav>
 
 <!-- ============================================ -->
 <!--                      Hero                    -->
