--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -50,7 +50,7 @@
         <section id="add-logs">
             <div class="log-button-container">
                 <button class="button" id="add-log">
-                    <img class="button" aria-hidden="true" loading="lazy" decoding="async" src="/images/plus.svg"></a>
+                    <!-- <img aria-hidden="true" loading="lazy" decoding="async" src="/images/plus.svg"></a> -->
                 </button>
             </div>
         </section>
