--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -50,6 +50,7 @@
         <section id="add-logs">
             <div class="log-button-container">
                 <button class="button" id="add-log">
+                    test
                     <!-- <img aria-hidden="true" loading="lazy" decoding="async" src="/images/plus.svg"></a> -->
                 </button>
             </div>
