variable feature almost working

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -56,22 +56,27 @@
         <div class="emoji-container">
             <h1 class="text">How long did you study for?</h1>
 
-            <picture><img src="/images/smiley_dissappointed.svg" width="auto" height="100px" alt="frown"></picture>
-            <picture><img src="/images/smiley_sad.svg" width="auto" height="100px" alt="frown"></picture>
-            <picture><img src="/images/smiley_no_mouth.svg" width="auto" height="100px" alt="frown"></picture>
-            <picture><img src="/images/smiley_smiling.svg" width="auto" height="100px" alt="frown"></picture>
-            <picture><img src="/images/smiley_happy_laughing.svg" width="auto" height="100px" alt="frown"></picture>
+            <button class="emoji-pic"><img src="/images/smiley_dissappointed.svg" width="auto" height="100px" alt="frown"></button>
+            <button class="emoji-pic"><img src="/images/smiley_sad.svg" width="auto" height="100px" alt="frown"></button>
+            <button class="emoji-pic"><img src="/images/smiley_no_mouth.svg" width="auto" height="100px" alt="frown"></button>
+            <button class="emoji-pic"><img src="/images/smiley_smiling.svg" width="auto" height="100px" alt="frown"></button>
+            <button class="emoji-pic"><img src="/images/smiley_happy_laughing.svg" width="auto" height="100px" alt="frown"></button>
 
-            <button id="lang-button" class="button">Select</button>
-
+            <button id="select-button" class="button">Select</button>
         </div>
-     </section>
+     </section> 
     <!-- ============================================ -->
-    <!--                 Language Options             -->
+    <!--                 Study Options             -->
     <!-- ============================================ -->
-     <section id="language-options">
-        <div class="language-options-container">
+     <section id="study-types">
+        <div class="study-types-container">
             <h1 class="text">What did you study?</h1>
+            <button class="icon"><img src="/images/writing.svg" width="auto" height="100px" alt="frown"></button>
+            <button class="icon"><img src="/images/writing.svg" width="auto" height="100px" alt="frown"></button>
+            <button class="icon"><img src="/images/writing.svg" width="auto" height="100px" alt="frown"></button>
+            <button class="icon"><img src="/images/writing.svg" width="auto" height="100px" alt="frown"></button>
+            <button class="icon"><img src="/images/writing.svg" width="auto" height="100px" alt="frown"></button>
+            <button class="icon"><img src="/images/writing.svg" width="auto" height="100px" alt="frown"></button>            
         </div>
      </section>
 
