variable function working

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -62,7 +62,7 @@
             <button class="emoji-pic"><img src="/images/smiley_smiling.svg" width="auto" height="100px" alt="frown"></button>
             <button class="emoji-pic"><img src="/images/smiley_happy_laughing.svg" width="auto" height="100px" alt="frown"></button>
 
-            <button id="select-button" class="button">Select</button>
+            <button id="select-emoji-button" class="button">Select</button>
         </div>
      </section> 
     <!-- ============================================ -->
@@ -71,12 +71,14 @@
      <section id="study-types">
         <div class="study-types-container">
             <h1 class="text">What did you study?</h1>
+            <button class="icon"><img src="/images/reading.svg" width="auto" height="100px" alt="frown"></button>
             <button class="icon"><img src="/images/writing.svg" width="auto" height="100px" alt="frown"></button>
-            <button class="icon"><img src="/images/writing.svg" width="auto" height="100px" alt="frown"></button>
-            <button class="icon"><img src="/images/writing.svg" width="auto" height="100px" alt="frown"></button>
+            <button class="icon"><img src="/images/watching.svg" width="auto" height="100px" alt="frown"></button>
             <button class="icon"><img src="/images/writing.svg" width="auto" height="100px" alt="frown"></button>
             <button class="icon"><img src="/images/writing.svg" width="auto" height="100px" alt="frown"></button>
             <button class="icon"><img src="/images/writing.svg" width="auto" height="100px" alt="frown"></button>            
+        
+            <button id="select-icon-button" class="button">Select</button>
         </div>
      </section>
 
